fix header alignment when ultra wide

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -8,7 +8,7 @@
     left: 0;
     top: 0;
     min-height: 10vh;
-    max-width: 1920px;
+    max-width: 100vh;
     background-color: var(--bgColor);
     transition: transform 0.5s ease;
 
